--- a/product/product.html
+++ b/product/product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,15 @@
     <link rel="stylesheet" href="/product/product.css">
     <title>Document</title>
 </head>
+
 <body>
+
     <header class="nav">
         <nav>
             <h2>Pustakalya</h2>
         </nav>
 
-        <div class="align-center" ><input type="email" name="email" placeholder="Search...." class="input" /></a></div>
+        <div class="align-center"><input type="email" name="email" placeholder="Search...." class="input" /></a></div>
         <div class="icon-container">
             <a class="topnav-link style-icon" href=""><span><i class="bi bi-person-fill"></i></span></a>
             <a class="topnav-link" href=""><span><i class="bi bi-suit-heart-fill"></i></span"></a>
@@ -25,17 +28,94 @@
     <div class="main-container">
         <aside class="product-side-bar">
             <div class="filter-btn">
-                <h4>Filters</h4>
-                <h4>Clear</h4>
+                <p class="bar-heading">Filters</p>
+                <p class="bar-heading">Clear</p>
             </div>
-            
 
-            <div>
-                slider
+            <div class="price-range-bar">
+                <div class="rangeslider">
+                    <p class="bar-heading">Price</p>
+                    <input type="range" min="100" max="1000" value="10" class="myslider" id="sliderRange">
+                    <p>Value: <span id="demo"></span></p>
+                </div>
             </div>
+
+            <div class="side-bar-category">
+                <p class="bar-heading">Category</p>
+                <div>
+                    <input type="checkbox" name="religious" id="religious">Religious
+                </div>
+                <div>
+                    <input type="checkbox" name="fiction" id="fiction">Fiction
+                </div>
+                <div>
+                    <input type="checkbox" name="science" id="science">Science
+                </div>
+                <div>
+                    <input type="checkbox" name="thriller" id="thriller">Thriller
+                </div>
+            </div>
+
+            <div class="ratings">
+                <p class="bar-heading">Ratings</p>
+                <div><input type="radio" name="best" id="best-ratings"> 4 & above</div>
+                <div><input type="radio" name="better " id="better-ratings"> 3 & above</div>
+                <div><input type="radio" name="good" id="good-ratings"> 2 & above</div>
+                <div><input type="radio" name="worst" id="worst-ratings"> 1 & above</div>
+            </div>
+
+            <div class="sort-by">
+                <p class="bar-heading">Sort By</p>
+                <div>
+                    <input type="radio" name="low-high" id="l-h">Price- low to high
+
+                </div>
+                <div>
+                    <input type="radio" name="high-low" id="high-low">Price- high to low
+                </div>
+            </div>
+
 
         </aside>
-        <div class="product-display"></div>
+        <div class="product-display">
+            <div class="card-container">
+                <img class="card-img-top" src="/images/img2 (1).png" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Someone somewhare</h5>
+                    <p class="card-text">abcd</p>
+                    <a href="#" class="btn-card">Learn more</a>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <img class="card-img-top" src="/images/img2 (1).png" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Someone somewhare</h5>
+                    <p class="card-text">abcd</p>
+                    <a href="#" class="btn-card">Learn more</a>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <img class="card-img-top" src="/images/img2 (1).png" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Someone somewhare</h5>
+                    <p class="card-text">abcd</p>
+                    <a href="#" class="btn-card">Learn more</a>
+                </div>
+            </div>
+
+            <div class="card-container">
+                <img class="card-img-top" src="/images/img2 (1).png" alt="">
+                <div class="card-body">
+                    <h5 class="card-title">Someone somewhare</h5>
+                    <p class="card-text">abcd</p>
+                    <a href="#" class="btn-card">Learn more</a>
+                </div>
+            </div>
+        </div>
     </div>
+    <script src="/product/range.js"></script>
 </body>
+
 </html>
