--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="new-arrivals-container">
           <div class="arrival-card">
             <div class="card-arrival">
-              <div class="card_image"> <img src="/img/chankya_ccexpress.jpeg" /> </div>
+              <div class="card_image"> <img src="/img/chankya.jpeg" /> </div>
               <div class="card_title">
                 <h1>New Arrivals</h1>
                 <h3>summer Collection</h3>
@@ -106,7 +106,7 @@
           </div>
           <div class="arrival-card">
             <div class="card-arrival">
-              <div class="card_image"> <img src="/img/ramanujan_ccexpress.jpeg" /> </div>
+              <div class="card_image"> <img src="/img/ramanujan.jpeg" /> </div>
               <div class="card_title ">
                 <h1>Biography</h1>
                 <h3>Summer Collection</h3>
