refactor: changed images

--- a/products/products.html
+++ b/products/products.html
@@ -47,7 +47,7 @@
                 <div class="rangeslider">
                     <p class="bar-heading">Price</p>
                     <input type="range" min="100" max="1000" value="10" class="myslider" id="sliderRange">
-                    <p>Value: <span id="demo"></span></p>
+                    <p>Value: <span id="demo">12</span></p>
                 </div>
             </div>
 
@@ -88,7 +88,7 @@
 
         <div class="product-display">
             <div class="card-container">
-                <img class="card-img-top" src="/img/" alt="">
+                <img class="card-img-top" src="/img/bhagwad-gita.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">Bhagvad Gita</p>
                     <p class="card-text">Rs 350 <span class="discount-para">(20% off)</span></p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card-container">
-                <img class="card-img-top" src="/images/js.jpg" alt="">
+                <img class="card-img-top" src="/img/html.jpeg" alt="">
                 <div class="card-body">
                     <p class="card-title">Javascript</p>
                     <p class="card-text">Rs 299 <span class="discount-para">(50% off)</span></p>
@@ -114,7 +114,7 @@
             </div>
 
             <div class="card-container">
-                <img class="card-img-top" src="/images/decision.jpg" alt="">
+                <img class="card-img-top" src="/img/decision.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">Decision Maker</p>
                     <p class="card-text">Rs 299 <span class="discount-para">(50% off)</span></p>
@@ -125,20 +125,10 @@
                 </div>
             </div>
 
-            <div class="card-container">
-                <img class="card-img-top" src="/images/wings.jpeg" alt="">
-                <div class="card-body">
-                    <p class="card-title">Wings of fire</p>
-                    <p class="card-text">Rs 329 <span class="discount-para">(20% off)</span></p>
-                    <div class="card-btn-icon">
-                        <a href="#" class="btn-card">Add to cart</a>
-                        <a href="#"><span><i class="bi bi-suit-heart-fill card-icon"></i></span"></a>
-                    </div>
-                </div>
-            </div>
+
 
             <div class="card-container">
-                <img class="card-img-top" src="/images/Laws.jpg" alt="">
+                <img class="card-img-top" src="/img/revolution.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">48 Laws Power</p>
                     <p class="card-text">Rs 200 <span class="discount-para">(30% off)</span></p>
@@ -149,7 +139,7 @@
                 </div>
             </div>
             <div class="card-container">
-                <img class="card-img-top" src="/images/tesla.jpg" alt="">
+                <img class="card-img-top" src="/img/48-laws.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">48 Laws Power</p>
                     <p class="card-text">Rs 370 <span class="discount-para">(10% off)</span></p>
@@ -160,7 +150,7 @@
                 </div>
             </div>
             <div class="card-container">
-                <img class="card-img-top" src="/images/react.jpg" alt="">
+                <img class="card-img-top" src="/img/learning-react.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">React Learning</p>
                     <p class="card-text">Rs 250 <span class="discount-para">(10% off)</span></p>
@@ -171,7 +161,7 @@
                 </div>
             </div>
             <div class="card-container">
-                <img class="card-img-top" src="/images/node.jpg" alt="">
+                <img class="card-img-top" src="/img/node.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">Node</p>
                     <p class="card-text">Rs 500 <span class="discount-para">(25% off)</span></p>
@@ -183,7 +173,7 @@
             </div>
 
             <div class="card-container">
-                <img class="card-img-top" src="/images/swami.jpg" alt="">
+                <img class="card-img-top" src="/img/swami.jpg" alt="">
                 <div class="card-body">
                     <p class="card-title">Youth of India</p>
                     <p class="card-text">Rs 600 <span class="discount-para">(35% off)</span></p>
@@ -194,9 +184,9 @@
                 </div>
             </div>
             <div class="card-container">
-                <img class="card-img-top" src="/images/elon.jpg" alt="">
+                <img class="card-img-top" src="/img/neti.jpg" alt="">
                 <div class="card-body">
-                    <p class="card-title">Elon</p>
+                    <p class="card-title">Chankaya Neti</p>
                     <p class="card-text">Rs 400 <span class="discount-para">(25% off)</span></p>
                     <div class="card-btn-icon">
                         <a href="#" class="btn-card">Add to cart</a>
@@ -204,21 +194,12 @@
                     </div>
                 </div>
             </div>
-            <div class="card-container">
-                <img class="card-img-top" src="/images/jordan.jpg" alt="">
-                <div class="card-body">
-                    <p class="card-title"> Jordan Peterson</p>
-                    <p class="card-text">Rs 700 <span class="discount-para">(20% off)</span></p>
-                    <div class="card-btn-icon">
-                        <a href="#" class="btn-card">Add to cart</a>
-                        <a href="#"><span><i class="bi bi-suit-heart-fill card-icon"></i></span"></a>
-                    </div>
-                </div>
-            </div>
+
+            
         </div>
 
     </article>
 
-    <script src="/product/range.js"></script>
+    <script src="/products/range.js"></script>
 </body>
 </html>
