fix-bug: sort by bug fixed

--- a/products/products.html
+++ b/products/products.html
@@ -78,10 +78,10 @@
             <div class="sort-by">
                 <p class="bar-heading">Sort By</p>
                 <div>
-                    <input type="radio" name="low-high" id="l-h">Price- low to high
+                    <input type="radio" name="sort" id="l-h">Price- low to high
                 </div>
                 <div>
-                    <input type="radio" name="high-low" id="high-low">Price- high to low
+                    <input type="radio" name="sort" id="high-low">Price- high to low
                 </div>
             </div>
         </aside>
