fix: radio button bug fixed

--- a/products/products.html
+++ b/products/products.html
@@ -69,10 +69,10 @@
 
             <div class="ratings">
                 <p class="bar-heading">Ratings</p>
-                <div><input type="radio" name="best" id="best-ratings"> 4 & above</div>
-                <div><input type="radio" name="better " id="better-ratings"> 3 & above</div>
-                <div><input type="radio" name="good" id="good-ratings"> 2 & above</div>
-                <div><input type="radio" name="worst" id="worst-ratings"> 1 & above</div>
+                <div><input type="radio" name="p-ratings" id="best-ratings"> 4 & above</div>
+                <div><input type="radio" name="p-ratings" id="better-ratings"> 3 & above</div>
+                <div><input type="radio" name="p-ratings" id="good-ratings"> 2 & above</div>
+                <div><input type="radio" name="p-ratings" id="worst-ratings"> 1 & above</div>
             </div>
 
             <div class="sort-by">
@@ -195,11 +195,12 @@
                 </div>
             </div>
 
-            
+
         </div>
 
     </article>
 
     <script src="/products/range.js"></script>
 </body>
+
 </html>
