fix: image added and  size set

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           </div>
           <div class="arrival-card">
             <div class="card-arrival">
-              <div class="card_image"> <img src="/img/ramanujan_ccexpress.jpeg" /> </div>
+              <div class="card_image"> <img src="/img/chankya_ccexpress.jpeg" /> </div>
               <div class="card_title ">
                 <h1>Biography</h1>
                 <h3>Summer Collection</h3>
