--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -17,7 +17,7 @@
         <header class="nav">
             <nav class="nav-left">
                 <h2 id="nav-title">Pustakalya</h2>
-                <a class="gray-title" href="">
+                <a class="gray-title" href="/index.html">
                     <h4" id="nav-title">Home</h4>
                 </a>
             </nav>
@@ -28,8 +28,8 @@
                     </button></div>
             </div>
             <div class="icon-container">
-                <a class="topnav-link" href=""><span><i class="bi bi-person-fill"></i></span></i></a>
-                <a class="topnav-link" href=""><span><i class="bi bi-suit-heart-fill"></i></span"></a>
+                <a class="topnav-link" href="/login/login.html"><span><i class="bi bi-person-fill"></i></span></i></a>
+                <a class="topnav-link" href="/wishlist/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
                 <a class="topnav-link" href=""><span><i class="bi bi-cart-check-fill"></i></span></a>
             </div>
         </header>
