feat: links added

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -14,10 +14,10 @@
     <header class="nav">
         <nav class="nav-left">
             <h2 id="nav-title">Pustakalya</h2>
-            <a class="gray-title" href="">
+            <a class="gray-title" href="/index.html">
                 <h4" id="nav-title">Home</h4>
             </a>
-            <a class="gray-title" href="">
+            <a class="gray-title" href="/products/products.html">
                 <h4" id="nav-title">Shop Now</h4>
             </a>
         </nav>
@@ -28,9 +28,10 @@
                 </button></div>
         </div>
         <div class="icon-container">
-            <a class="topnav-link" href=""><span><i class="bi bi-person-fill"></i></span></i></a>
-            <a class="topnav-link" href="/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
-            <a class="topnav-link" href=""><span><i class="bi bi-cart-check-fill"></i></span></a>
+            <a class="topnav-link" href="/login/login.html"><span><i class="bi bi-person-fill"></i></span></i></a>
+            <a class="topnav-link" href="/wishlist/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
+            <a class="topnav-link" href="/cart/cart.html"><span><i class="bi bi-cart-check-fill"></i></span></a>
+            <a class="topnav-link" href="/signup/sign.html"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
         </div>
     </header>
     <article class="main-cart-container">
