--- a/products/products.html
+++ b/products/products.html
@@ -32,7 +32,8 @@
             <div class="icon-container">
                 <a class="topnav-link" href="/login/login.html"><span><i class="bi bi-person-fill"></i></span></i></a>
                 <a class="topnav-link" href="/wishlist/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
-                <a class="topnav-link" href=""><span><i class="bi bi-cart-check-fill"></i></span></a>
+                <a class="topnav-link" href="/cart/cart.html"><span><i class="bi bi-cart-check-fill"></i></span></a>
+                <a class="topnav-link" href="/signup/sign.html"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
             </div>
         </header>
 
