--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <a class="topnav-link" href="/login/login.html"><span><i class="bi bi-person-fill"></i></span></i></a>
         <a class="topnav-link" href="/wishlist/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
         <a class="topnav-link" href="/cart/cart.html"><span><i class="bi bi-cart-check-fill"></i></span></a>
-        <a class="topnav-link" href="/signup/sign.html"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
-      <button class="log-out"> log out</button>
+        <a class="topnav-link" href="#"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
+    
       </div>
     </header>
 
