--- a/login/login.html
+++ b/login/login.html
@@ -32,7 +32,7 @@
                 <a class="topnav-link" href="/login/login.html"><span><i class="bi bi-person-fill"></i></span></i></a>
                 <a class="topnav-link" href="/wishlist/wishlist.html"><span><i class="bi bi-suit-heart-fill"></i></span"></a>
                 <a class="topnav-link" href="/cart/cart.html"><span><i class="bi bi-cart-check-fill"></i></span></a>
-                <a class="topnav-link" href="/signup/sign.html"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
+                <a class="topnav-link" href="#"><span><i class="bi bi-box-arrow-in-right"></i></i></span></a>
             </div>
         </header>
     </nav>
@@ -45,7 +45,7 @@
                 <input type="checkbox" id="remember me" name="remember me" value="remember">
                 <label class="label" for="label"> remember me </label><br>
                 <input type="submit" name="login" class="login login-submit" value="login">
-                <p>not a member yet?</p><a class="signup" href="">sign-up now</a>
+                <p>not a member yet?</p><a class="signup" href="/signup/sign.html">sign-up now</a>
             </form>
         </div>
     </div>
